--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: GradientDescent to Here
+title: Piper
 
 # Short description of your site
 description: The first step is to establish that something is possible; then probability will occur!
