--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ footer-links-active:
 #disqus: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-75596761-3"
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
