--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Piper
 
 # disqus
-disqus: jihobak
+disqus: deeppiper
 
 # Short description of your site
 description: The first step is to establish that something is possible; then probability will occur!
